tests/test181.rael.exp
Error [tests/test181.rael:2:5]: Expected 1 or 2 arguments
| log :Types:Range(1, 2, 3, 4, 5)
|     ^
